# picow_day_clock

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  fontgen.py  fonts_extra.h  gui_paint_extra.h  ntp.c  ntp.h  pico-dow-clock.c
.github/workflows/: build.yml
fontgen/: CMakeLists.txt  create-font-bitmaps.py
lib/Fonts/: RobotoMedium12.c  RobotoMedium24.c  RobotoMedium48.c  fonts.h
lib/GUI/: GUI_Paint.c  GUI_Paint.h  GUI_Paint_Extras.c
lib/LCD/: LCD_1in47.c  LCD_1in47.h
licenses/: stm.txt  waveshare.txt
scripts/: CMakeLists.txt  convert-icon-bitmap.py  create-font-bitmaps.py  create-icon-bitmaps.py  glyph-test.py
src/: bitmap.h  clock.h  common.h  config.h  fb.c  fb.h  font.h  fonts.h  fonts_extra.h  gui_paint_extra.c  gui_paint_extra.h  hal.c  hal.h  lcd.c  lcd.h  lwipopts.h  ntp.c  ntp.h  pico-dow-clock.c  picow_day_clock.c  status.h  wifi.c  wifi.h
src/tests/: CMakeLists.txt  mock.c  mock.h  test.h  tests.c
tests/: CMakeLists.txt  mock.c  mock.h  test.h  tests.c
waveshare/: README.md
waveshare/Config/: DEV_Config.c  DEV_Config.h  Debug.h
waveshare/Fonts/: font12.c  font12CN.c  font16.c  font20.c  font24.c  font24CN.c  font8.c  fonts.h
waveshare/GUI/: GUI_Paint.c  GUI_Paint.h
waveshare/Infrared/: Infrared.c  Infrared.h
waveshare/LCD/: LCD_1in47.c  LCD_1in47.h
waveshare/examples/: ImageData.c  ImageData.h  LCD_1in47_test.c  LCD_Test.h
